# CareerPath_RL_echo

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements-openenv.txt  requirements.txt  server.py  streamlit_app.py
career_env/: README.md  __init__.py  env.py  models.py  openenv.yaml  tasks.py
server/: __init__.py  app.py
